# miniproyecto2-compactas

./: .gitignore  CMakeLists.txt  README.md  compile.sh  execute_benchmarks.sh  execute_tests.sh  initialize_project.sh  plot.sh
benchmarks/: CMakeLists.txt  README.md  bench_common.hpp  bench_k2_tune.cpp  bench_quick.cpp  patterns.cpp
cds/: README.md
include/: README.md  adjacency_list.hpp  benchmark.hpp  components.hpp  graph_io.hpp  k2_graph_io.hpp  k2_tree.hpp  k2_tree_bridge.h  pemb_graph.hpp  planar_graph.hpp
material-base/: DATASETS.md  ENUNCIADO.md  K2-TREE.md  PENDIENTES.md  README.md  ROADMAP.md  TURAN-PEMB.md
material-base/k2tree_basic_v0.1/: CMakeLists.txt
material-base/k2tree_v0.2/: MemoryManager.h  directcodes.c  fulldecompression.c  rebuildchecklink.c  rebuildrange.c  rebuildreverse.c  rebuildtree.c
material-base/udec-code/archives/: rw_g.tar
results/: INFORME.md  README.md  benchmark_full.csv  k2_best_params.csv  k2_tune.csv
results/plots/: plot_example.p  plot_space_bits.p  plot_space_bytes.p  plot_time_degree.p  plot_time_neighbors.p
scripts/: benchmark_full.sh  benchmark_k2_tune.sh  benchmark_quick.sh
src/: README.md  adjacency_list.cpp  components.cpp  graph_io.cpp  k2_graph_io.cpp  k2_tree.cpp  k2_tree_bridge.c  pemb_graph.cpp  planar_graph.cpp  smoke_main.cpp
tests/: CMakeLists.txt  README.md  fm.cpp  occ.cpp  patterns_gen.cpp  test_adjacency_list.cpp  test_components.cpp  test_k2_graph_io.cpp  test_k2_tree.cpp  test_pemb_graph.cpp  wt.cpp
